--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 
 /*---------------------------------------
-    Typorgraphy              
+    Typorgraphy
 -----------------------------------------*/
 
 h1,h2,h3,h4,h5,h6 {
@@ -59,7 +59,7 @@ strong {
 
 
 /*---------------------------------------
-    General               
+    General
 -----------------------------------------*/
 
 html{
@@ -115,7 +115,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-    Preloader section              
+    Preloader section
 -----------------------------------------*/
 
 .preloader {
@@ -139,7 +139,7 @@ a:hover, a:active, a:focus {
   border-radius: 40px;
   position: relative;
   -webkit-animation: sk-innerCircle 1s linear infinite;
-  animation: sk-innerCircle 1s linear infinite; 
+  animation: sk-innerCircle 1s linear infinite;
 }
 
 .sk-spinner-wordpress .sk-inner-circle {
@@ -150,7 +150,7 @@ a:hover, a:active, a:focus {
   position: absolute;
   border-radius: 8px;
   top: 5px;
-  left: 5px; 
+  left: 5px;
 }
 
 @-webkit-keyframes sk-innerCircle {
@@ -174,8 +174,11 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-    Main Navigation             
+    Main Navigation
 -----------------------------------------*/
+#juntokyo {
+	display: inline-block;
+}
 
 .navbar-default {
     background: #ffffff;
@@ -240,14 +243,14 @@ a:hover, a:active, a:focus {
   }
 
 .navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus { 
+.navbar-default .navbar-toggle:focus {
   background-color: transparent;
 }
 
 
 
 /*---------------------------------------
-    Home section              
+    Home section
 -----------------------------------------*/
 
 #home {
@@ -275,7 +278,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-   About section              
+   About section
 -----------------------------------------*/
 
 #about .text-center {
@@ -312,7 +315,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-   Portfolio section              
+   Portfolio section
 -----------------------------------------*/
 
 #portfolio small {
@@ -364,7 +367,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-   Single Project section              
+   Single Project section
 -----------------------------------------*/
 
 #single-project {
@@ -397,7 +400,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-   Contact section              
+   Contact section
 -----------------------------------------*/
 
 #contact .col-md-6,
@@ -438,7 +441,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-   Blog section              
+   Blog section
 -----------------------------------------*/
 
 .blog-post-thumb {
@@ -590,7 +593,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-   Blog Single Post section              
+   Blog Single Post section
 -----------------------------------------*/
 
 #blog-single-post .blog-post-des h3 {
@@ -600,7 +603,7 @@ a:hover, a:active, a:focus {
 
 
 /*---------------------------------------
-   Footer section              
+   Footer section
 -----------------------------------------*/
 
 footer {
@@ -629,7 +632,7 @@ footer .footer-copyright {
 
 
 /*---------------------------------------
-   Social icon             
+   Social icon
 -----------------------------------------*/
 
 .social-icon {
@@ -664,7 +667,7 @@ footer .footer-copyright {
 
 
 /*---------------------------------------
-   Mobile Responsive         
+   Mobile Responsive
 -----------------------------------------*/
 
 
@@ -711,5 +714,3 @@ footer .footer-copyright {
   }
 
 }
-
-
